@@ -41,4 +41,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+
+    jvmArgs += [
+            "-XX:+EnableDynamicAgentLoading"
+    ]
 }
